--- a/02python_basic.ipynb
+++ b/02python_basic.ipynb
@@ -352,7 +352,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 64,
+   "execution_count": 2,
    "id": "8fea5691-6c18-470b-8e7d-f09e59b31aa5",
    "metadata": {},
    "outputs": [
@@ -365,7 +365,7 @@
     }
    ],
    "source": [
-    "print('\"안녕?\"이라는 그 인사를 듣고 나는',\"'누구지?'라고 생각했다.\")\n",
+    "print('\"안녕?\"이라는 그 인사를 듣고 나는 \\'누구지?\\'라고 생각했다.')\n",
     "    "
    ]
   },
