--- a/04python_function.ipynb
+++ b/04python_function.ipynb
@@ -40,7 +40,7 @@
    ],
    "source": [
     "#리스트 메소드\n",
-    "#object(객체)리스트.append(요소) -> 객체 속에서 동작, 함수와 유사한 기능, 함수 != 메소드\n",
+    "#object(객체)리스트.append(요소) -> class안에서 동작하는 함수, 함수 != 메소드\n",
     "#리스트 맨 뒤에 요소 추가\n",
     "\n",
     "numbers=[1,2,3,4,5,6,7]\n",
