--- a/05python_input.ipynb
+++ b/05python_input.ipynb
@@ -306,8 +306,37 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "id": "9f77cfce-47b4-4fee-ac20-22d712358b57",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdin",
+     "output_type": "stream",
+     "text": [
+      "국어,영어,수학,과학 점수를 입력해주세요 98,100,96,100\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\n",
+      "실행결과:\n",
+      "평균 점수는 98.5 점 입니다.\n"
+     ]
+    }
+   ],
+   "source": [
+    "kor,eng,mat,sci = map(int,input('국어,영어,수학,과학 점수를 입력해주세요').split(','))\n",
+    "avg = (kor+eng+mat+sci) / 4\n",
+    "print('\\n실행결과:\\n평균 점수는',avg,'점 입니다.')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "70dd024f-e084-41c9-9667-9d980e7c924e",
    "metadata": {},
    "outputs": [],
    "source": []
