--- a/07python_if.ipynb
+++ b/07python_if.ipynb
@@ -574,8 +574,39 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "id": "34d8811f-605b-433c-b75c-8e44dcb754c9",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdin",
+     "output_type": "stream",
+     "text": [
+      "확인할 연도를 입력하세요: 2000\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "윤년입니다.\n"
+     ]
+    }
+   ],
+   "source": [
+    "year = int(input('확인할 연도를 입력하세요:'))\n",
+    "\n",
+    "if year % 100 ==0 and year % 400 !=0 :\n",
+    "    print('평년입니다.')\n",
+    "else :\n",
+    "    print('윤년입니다.')\n",
+    "    "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "c4b2e0b8-6ea0-4420-9e67-855f4ce49fe8",
    "metadata": {},
    "outputs": [],
    "source": []
