--- a/09python_while.ipynb
+++ b/09python_while.ipynb
@@ -266,8 +266,85 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "id": "22f17215-6549-4c42-887d-eaa24da05e99",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "1 2 3 4 5 6 7 8 9 10 "
+     ]
+    }
+   ],
+   "source": [
+    "for _ in range(1,11) :\n",
+    "    print(_,end=\" \")\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "id": "d7c4b36a-6bf5-4eca-b7fa-c1f328d4e2b6",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "1 2 3 4 5 6 7 8 9 10 "
+     ]
+    }
+   ],
+   "source": [
+    "i = 1\n",
+    "while i < 11 :\n",
+    "    print(i ,end=\" \")\n",
+    "    i += 1"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "id": "9785db03-8a1f-49d4-aaa0-07f5a7686365",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "79.0\n",
+      "20.0\n"
+     ]
+    }
+   ],
+   "source": [
+    "class_a = (70,60,55,75,95,90,80,80,85,100)\n",
+    "\n",
+    "i = 0\n",
+    "a = 0\n",
+    "while i < len(class_a) :\n",
+    "    a += class_a[i]\n",
+    "    i += 1\n",
+    "    \n",
+    "print(a/len(class_a))\n",
+    "    \n",
+    "#질문 \n",
+    "i = 0\n",
+    "a = 0\n",
+    "while i < len(class_a) :\n",
+    "    a = class_a[i]\n",
+    "    a += a\n",
+    "    i += 1\n",
+    "    \n",
+    "print(a/len(class_a))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "c119a7ef-d497-4e9b-8eeb-b3cb6a4dd399",
    "metadata": {},
    "outputs": [],
    "source": []
