--- a/09python_while.ipynb
+++ b/09python_while.ipynb
@@ -306,7 +306,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 17,
    "id": "9785db03-8a1f-49d4-aaa0-07f5a7686365",
    "metadata": {},
    "outputs": [
@@ -314,8 +314,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "79.0\n",
-      "20.0\n"
+      "79.0\n"
      ]
     }
    ],
@@ -329,22 +328,49 @@
     "    i += 1\n",
     "    \n",
     "print(a/len(class_a))\n",
-    "    \n",
-    "#질문 \n",
-    "i = 0\n",
-    "a = 0\n",
-    "while i < len(class_a) :\n",
-    "    a = class_a[i]\n",
-    "    a += a\n",
+    "    \n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
+   "id": "c119a7ef-d497-4e9b-8eeb-b3cb6a4dd399",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "79.0\n"
+     ]
+    }
+   ],
+   "source": [
+    "class_a = (70,60,55,75,95,90,80,80,85,100)\n",
+    "\n",
+    "i=0\n",
+    "total = 0\n",
+    "while i < len(class_a):\n",
+    "    total += class_a[i]\n",
     "    i += 1\n",
     "    \n",
-    "print(a/len(class_a))"
+    "print(total/len(class_a))\n",
+    "   \n",
+    "    "
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "c119a7ef-d497-4e9b-8eeb-b3cb6a4dd399",
+   "id": "01367ec2-b6c5-49e6-931f-932b405a4dfc",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "cf6a01f4-2c3c-44fd-a28e-e25e43d15824",
    "metadata": {},
    "outputs": [],
    "source": []
