--- a/10python_break.ipynb
+++ b/10python_break.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 1,
    "id": "13d5bf87-4cdb-4401-9e33-c86e99c8aaad",
    "metadata": {},
    "outputs": [
@@ -20,6 +20,7 @@
     "#보통 반복문 안에서 특정 조건에 부합할 때 빠져나가기 위함 -> if랑 같이 쓰임\n",
     "\n",
     "#While문 - 무한 루프 활용\n",
+    "\n",
     "i = 0\n",
     "total = 0\n",
     "while True :\n",
@@ -61,6 +62,33 @@
     "    input_value = input('q를 입력하면 종료')\n",
     "    if input_value == 'q' : break\n",
     "print('프로그램 종료')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "id": "63cbc5e9-6f4b-402b-ab33-a452784ac302",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "3 13 23 33 43 53 63 73 83 93 "
+     ]
+    }
+   ],
+   "source": [
+    "i = 0\n",
+    "while True :\n",
+    "    if i % 10 != 3 :\n",
+    "        i += 1\n",
+    "        continue\n",
+    "    if i > 100 :\n",
+    "        break\n",
+    "    \n",
+    "    print(i,end=' ')\n",
+    "    i += 1"
    ]
   },
   {
@@ -135,8 +163,74 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "id": "5955afb0-aa37-4e6b-81a8-e25beb481501",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdin",
+     "output_type": "stream",
+     "text": [
+      "시작하는 정수 입력: 1\n",
+      "끝나는 정수 입력: 10\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "1부터 10까지의 합은 55 입니다.\n"
+     ]
+    }
+   ],
+   "source": [
+    "start = int(input('시작하는 정수 입력:'))\n",
+    "end = int(input('끝나는 정수 입력:'))\n",
+    "\n",
+    "total=0\n",
+    "for i in range(start, end+1) :\n",
+    "    total += i\n",
+    "print(f'{start}부터 {end}까지의 합은 {total} 입니다.')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "id": "f5cd8d6b-72d7-4e51-b358-03345d5834c2",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdin",
+     "output_type": "stream",
+     "text": [
+      "시작하는 정수 입력: 1\n",
+      "끝나는 정수 입력: 10\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "1부터 10까지의 합은 55 입니다.\n"
+     ]
+    }
+   ],
+   "source": [
+    "start = int(input('시작하는 정수 입력:'))\n",
+    "end = int(input('끝나는 정수 입력:'))\n",
+    "\n",
+    "i=start\n",
+    "total = 0 \n",
+    "while i <= end :\n",
+    "    total += i\n",
+    "    i+=1\n",
+    "print(f'{start}부터 {end}까지의 합은 {total} 입니다.')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "19f2fd59-1f3a-4760-a997-a8cc6f557c3a",
    "metadata": {},
    "outputs": [],
    "source": []
