--- a/11python_dictionary type.ipynb
+++ b/11python_dictionary type.ipynb
@@ -21,9 +21,9 @@
     "\n",
     "#비 시퀀스 자료형\n",
     "#인덱스를 가지지 않는 대신 고유한 키(key)값 가짐\n",
-    "#key-value pair\n",
     "#키와 값이 한 쌍을 이룸\n",
-    "#중괄호{}활용하여 생성\n",
+    "#key-value pair\n",
+    "#중괄호{} 활용하여 생성\n",
     "#dictionary_variable = {key:value,key:value,...}\n",
     "\n",
     "dic_var = {'key':'value'}\n",
@@ -179,7 +179,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 3,
    "id": "a26d624c-369d-49ff-ad2f-cddcd9dd3601",
    "metadata": {},
    "outputs": [
@@ -197,7 +197,7 @@
     "sam_list = []\n",
     "for index in range(len(keys)):\n",
     "    sam_list.append((keys[index], values[index]))\n",
-    "print(sam_list)"
+    "print(sam_list)\n"
    ]
   },
   {
@@ -349,7 +349,13 @@
    "cell_type": "code",
    "execution_count": 39,
    "id": "54562d9d-1a95-442b-a977-57f2ef3f864b",
-   "metadata": {},
+   "metadata": {
+    "collapsed": true,
+    "jupyter": {
+     "outputs_hidden": true
+    },
+    "tags": []
+   },
    "outputs": [
     {
      "name": "stdout",
@@ -375,6 +381,44 @@
     "\n",
     "print(dict_b)\n",
     "len(dict_b)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 21,
+   "id": "00389ccd-f44f-4584-8433-d8fd1b879bfa",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdin",
+     "output_type": "stream",
+     "text": [
+      "과일 이름을 입력하세요. 사과\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "사과의 가격은 1000원입니다.\n",
+      "사과의 가격은 1000원입니다.\n"
+     ]
+    }
+   ],
+   "source": [
+    "#방법 1\n",
+    "fruit = input('과일 이름을 입력하세요.')\n",
+    "\n",
+    "dict_fruit = {'사과' : 1000, '바나나' : 700 , '오렌지' : 1500, '파인애플' : 2000}\n",
+    "\n",
+    "print(f'{fruit}의 가격은 {dict_fruit[fruit]}원입니다.')\n",
+    "    \n",
+    "#방법2\n",
+    "names = ('사과','바나나')\n",
+    "price = (1000,2000)\n",
+    "dict_a = dict(zip(names,price))\n",
+    "\n",
+    "print(f'{fruit}의 가격은 {dict_a[fruit]}원입니다.')"
    ]
   },
   {
@@ -435,6 +479,37 @@
     "\n",
     "dict_info = dict(zip(names,weights))\n",
     "print(dict_info)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 18,
+   "id": "20e1a9d2-ab47-4801-82ed-06b1f8a73f01",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdin",
+     "output_type": "stream",
+     "text": [
+      "이름을 기입해주세요. 뽀 루\n",
+      "몸무게를 입력해주세요. 10.2 10.2\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{'뽀': 10.2, '루': 10.2}\n"
+     ]
+    }
+   ],
+   "source": [
+    "names= input('이름을 기입해주세요.').split()\n",
+    "weight =map(float,input('몸무게를 입력해주세요.').split())\n",
+    "\n",
+    "dict_info = dict(zip(names,weight))\n",
+    "print(dict_info)\n",
+    "\n"
    ]
   },
   {
