--- a/13python_set.ipynb
+++ b/13python_set.ipynb
@@ -40,7 +40,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 1,
    "id": "1765da68-fbf9-42a4-989c-bee81a321516",
    "metadata": {},
    "outputs": [],
@@ -54,6 +54,7 @@
     "#요소가 세트 자료형에 존재하지 않아도 KeyError 발생 X\n",
     "\n",
     "#.pop()\n",
+    "#비시퀀스라서 순서를 보장 X\n",
     "#삭제하려는 요소를 반환 후 삭제\n",
     "#세트 자료형 내에서 더 이상 삭제할 요소가 없다면 KeyError \n",
     "\n",
@@ -292,8 +293,93 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "id": "50b83543-8042-4a02-9fb5-1bdb72e81c5c",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{75, 45, 15, 90, 60, 30}\n"
+     ]
+    }
+   ],
+   "source": [
+    "#나\n",
+    "\n",
+    "set_3 = {i for i in range(3,101,3)}\n",
+    "set_5 = {i for i in range(5,101,5)}\n",
+    "\n",
+    "result_set = set_3 & set_5\n",
+    "print(result_set)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "id": "5052cee4-d1d9-4314-86e1-35496f8a48ec",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{75, 45, 15, 90, 60, 30}\n"
+     ]
+    }
+   ],
+   "source": [
+    "#강사님\n",
+    "\n",
+    "set_3 = { _ for _ in range(1,101) if _ % 3 == 0}\n",
+    "set_5 = { _ for _ in range(1,101) if _ % 5 == 0}\n",
+    "result_set = set.intersection(set_3,set_5)\n",
+    "print(result_set)\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 56,
+   "id": "3d536153-383a-4ff6-ac75-9bc077415f8f",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "개인정보 조회, 구매 관리, 근태 관리, 시스템 관리, 인사 관리, 회계 관리"
+     ]
+    }
+   ],
+   "source": [
+    "role_admin = (\"회계 관리\", \"인사 관리\", \"구매 관리\", \"시스템 관리\")\n",
+    "role_hr = (\"인사 관리\", \"개인정보 조회\", \"회계 관리\", \"근태 관리\")\n",
+    "role_user = (\"개인정보 조회\", \"근태 관리\")\n",
+    "\n",
+    "menu =list(set(role_admin + role_hr + role_user))\n",
+    "menu.sort()\n",
+    "\n",
+    "end_char = \", \"\n",
+    "for _ in menu:\n",
+    "    if menu[-1] == _ :\n",
+    "        end_char = \"\"\n",
+    "    print( _  ,end=end_char)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "ab069ae3-2379-41d8-80a8-c756bab1e418",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "cbc0d960-a1b6-4f97-884c-598e8e205496",
    "metadata": {},
    "outputs": [],
    "source": []
