--- a/12python_list.ipynb
+++ b/12python_list.ipynb
@@ -41,10 +41,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "id": "536bad55-12a1-4745-849e-f0462d9a3028",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdin",
+     "output_type": "stream",
+     "text": [
+      "숫자를 띄어쓰기로 구분하여 여럿 입력해보세요. 5 6 7 8 \n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "<class 'list'>\n",
+      "[5, 6, 7, 8]\n"
+     ]
+    }
+   ],
    "source": [
     "#리스트 생성 - 문자열.split()\n",
     "\n",
@@ -55,10 +71,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "id": "64af03fc-679f-4996-9a4d-8a8a91d48f0d",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[0, 1, 4, 9, 16, 25, 36, 49, 64, 81]\n",
+      "[1, 2, 3, 4, 5, 6, 7, 8, 9]\n"
+     ]
+    }
+   ],
    "source": [
     "#리스트 컴프리헨션(comprehension)\n",
     "\n",
@@ -66,16 +91,10 @@
     "#[]안에 표현식 for문 / 콜론(:) 사용 X\n",
     "#for문의 조건을 만족할 때마다 표현식으로 자료 하나씩 반복해서 리스트 형태로 생성\n",
     "\n",
-    "#동작순서\n",
-    "#반복가능한 객체(iterable)로부터 값을 하나 꺼내와서 변수에 담음\n",
-    "#요소를 담은 변수를 활용해서 표현식을 실행 /  변수는 사용 할 수도 안할 수도\n",
-    "#표현식 결과 값을 리스트 요소에 넣음\n",
-    "#iterable로부터 값이 없을 때까지 1~3 과정 반복\n",
-    "\n",
     "#list_variable = [expression for 변수 in iterable]\n",
     "\n",
     "#list : [0,1,2,...,9]\n",
-    "[i **  2 for i in list(range(10))]\n",
+    "print([i **  2 for i in list(range(10))])\n",
     "\n",
     "list_c = [i for i in range(1,10)]\n",
     "print(list_c)"
@@ -118,10 +137,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "id": "e413ff6d-dea5-4b9e-be3c-c105e51f606d",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[1, 3, 5, 7, 9]\n"
+     ]
+    }
+   ],
    "source": [
     "#홀수 리스트 생성\n",
     "prac_result2 = [i for i in range(1,10,2)]\n",
@@ -130,10 +157,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "id": "d5d3e15c-5989-4b72-b5ff-4e1fca8a2825",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "['a', 'b', 'c', 'd', 'e', 'f', 'g']\n"
+     ]
+    }
+   ],
    "source": [
     "prac_result3 = [i for i in 'abcdefg']\n",
     "print(prac_result3)"
@@ -141,19 +176,72 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 20,
+   "id": "f7ec567a-5f64-4bdf-9953-b97157b11614",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "['2', '3', '4', '5', '6', '7', '8', '9', '10', 'J', 'Q', 'K', 'A']\n",
+      "['2', '3', '4', '5', '6', '7', '8', '9', '10', 'J', 'Q', 'K', 'A']\n",
+      "['2', '3', '4', '5', '6', '7', '8', '9', '10', ['J', 'Q', 'K', 'A']]\n"
+     ]
+    }
+   ],
+   "source": [
+    "#나\n",
+    "list_value1 = list(str(i) for i in range(2,11)) \n",
+    "list_value2 = list(j for j in 'JQKA')\n",
+    "\n",
+    "print(list_value1 + list_value2)\n",
+    "\n",
+    "#강의1\n",
+    "prac_result4 = [str(i) for i in range(2,11)] + [i for i in 'JQKA']\n",
+    "print(prac_result4)\n",
+    "\n",
+    "#강의2\n",
+    "prac_result4 = [str(i) for i in range(2,11)]\n",
+    "prac_result4.append([i for i in 'JQKA'])\n",
+    "print(prac_result4)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 23,
+   "id": "296f2aa8-ce10-45aa-b2b7-ceaad5636de5",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[['2', '3', '4', '5', '6', '7', '8', '9', '10', ['J', 'Q', 'K', 'A']], ['2', '3', '4', '5', '6', '7', '8', '9', '10', ['J', 'Q', 'K', 'A']], ['2', '3', '4', '5', '6', '7', '8', '9', '10', ['J', 'Q', 'K', 'A']], ['2', '3', '4', '5', '6', '7', '8', '9', '10', ['J', 'Q', 'K', 'A']]]\n"
+     ]
+    }
+   ],
+   "source": [
+    "prac_result5 = [prac_result4 for i in range(4)]\n",
+    "print(prac_result5)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
    "id": "68cace5a-9176-4856-b64e-110248c71fc9",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[0, 3, 6, 9]\n"
+     ]
+    }
+   ],
    "source": [
     "#리스트 컴프리헨션 - if \n",
-    "\n",
-    "#동작순서\n",
-    "#iterable로부터 값을 하나 꺼내와서 조건식에 넣습니다\n",
-    "#조건식이 True이면 변수를 활용해서 표현식 실행\n",
-    "#조건식이 false이면 1부터 다시 시작\n",
-    "#표현식 결과 값을 리스트 요소에 넣음\n",
-    "#iterable의 값이 없을 때까지 1-3과정을 반복\n",
     "\n",
     "#list_variable = [expression for 변수 in iterable if 조건식]\n",
     "\n",
@@ -258,7 +346,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "id": "21eab385-6390-49ea-a063-4ebc265da574",
    "metadata": {},
    "outputs": [],
@@ -334,10 +422,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 24,
    "id": "34f00e19-6748-44f0-942a-7650854a786d",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "prac_result의 id: 1660147380800\n",
+      "prac_result5[0] : 1660147380800\n",
+      "prac_result5[1] : 1660147380800\n",
+      "prac_result5[2] : 1660147380800\n",
+      "prac_result5[3] : 1660147380800\n"
+     ]
+    }
+   ],
    "source": [
     "#id()내장 함수\n",
     "#객체의 메모리 주소 조회\n",
@@ -375,10 +475,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 25,
    "id": "2f1b59ca-be7d-4ef1-b594-8482aedada83",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "1660147325632\n",
+      "1660147376960\n",
+      "False\n",
+      "True\n"
+     ]
+    }
+   ],
    "source": [
     "#[1,2,3,4,5,6,7,8,9]\n",
     "old_list = list(range(10))\n",
@@ -392,10 +503,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 26,
    "id": "521f66d1-75bc-4e71-ad00-e2b3066053d6",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "1660147266368\n",
+      "1660147266368\n",
+      "True\n",
+      "True\n"
+     ]
+    }
+   ],
    "source": [
     "#참고\n",
     "#tuple,str은 불변(immutable)\n",
@@ -429,10 +551,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 27,
    "id": "4cc2325e-1210-4eee-b075-d2ac35691801",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "False"
+      ]
+     },
+     "execution_count": 27,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "#256이하는 효율을 위해서 같은 객체로\n",
     "\n",
@@ -443,10 +576,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 28,
    "id": "c60258df-a564-48fa-b501-09c14c249477",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[0, 1, 2, 3, 4, 5, 6, 7, 8, 9]\n",
+      "[0, 1, 2, 3, 4, 5, 6, 7, 8, 9]\n",
+      "1660147023616\n",
+      "1660147023616\n"
+     ]
+    }
+   ],
    "source": [
     "#리스트 변수를 할당해서 복사\n",
     "#한 변수를 다른 변수에 대입하면 해당 변수의 메모리 주소 정보를 복사\n",
@@ -464,10 +608,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 29,
    "id": "5c073f33-dc75-4890-af7b-b26248f22d78",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "1660147344192\n",
+      "1660147324160\n",
+      "False\n"
+     ]
+    }
+   ],
    "source": [
     "#리스트 복사\n",
     "#.copy()메서드 \n",
@@ -486,10 +640,31 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 33,
    "id": "1a95c0de-2fd4-4383-96ab-e89c495e75f3",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "1\n",
+      "2\n",
+      "3\n",
+      "4\n",
+      "5\n",
+      "3\n",
+      "4\n",
+      "1\n",
+      "2\n",
+      "3\n",
+      "4\n",
+      "5\n",
+      "3\n",
+      "4\n"
+     ]
+    }
+   ],
    "source": [
     "#중첩 리스트\n",
     "\n",
@@ -508,15 +683,36 @@
     "    while j <len(easy_list[i]):\n",
     "        print(easy_list[i][j])\n",
     "        j += 1\n",
-    "    i += 1\n"
+    "    i += 1\n",
+    "    \n",
+    "  \n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 35,
    "id": "06b2c5e9-2f21-4dc5-8da2-79aedf466cd2",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[[0], [0], [0]]\n",
+      "[[999], [999], [999]]\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "True"
+      ]
+     },
+     "execution_count": 35,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "##중첩리스트인 경우 -> 얕은 복사, 깊은 복사\n",
     "\n",
@@ -541,10 +737,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 34,
    "id": "148b117e-a228-4515-85d0-1a7b0485207b",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "True\n",
+      "True\n"
+     ]
+    }
+   ],
    "source": [
     "#슬라이싱,copy()메서드를 통한 복사도 얕은 복사\n",
     "list_j = [[1,2],[3,4]]\n",
@@ -568,10 +773,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 37,
    "id": "b8308c61-fc51-4ab7-ab23-633822138249",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "False\n",
+      "[[9, 999], [11, 12]]\n",
+      "[[9, 10], [11, 12]]\n"
+     ]
+    }
+   ],
    "source": [
     "#깊은 복사(deep copy)\n",
     "\n",
@@ -708,7 +923,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 96,
+   "execution_count": 4,
    "id": "077a9ada-0b50-4340-8e23-06297104700d",
    "metadata": {},
    "outputs": [
@@ -726,7 +941,7 @@
      "traceback": [
       "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
       "\u001b[1;31mTypeError\u001b[0m                                 Traceback (most recent call last)",
-      "\u001b[1;32m~\\AppData\\Local\\Temp\\ipykernel_8624\\624151212.py\u001b[0m in \u001b[0;36m<module>\u001b[1;34m\u001b[0m\n\u001b[0;32m     11\u001b[0m         \u001b[0mprint\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;34mf'입력한 숫자는 다음과 같습니다. {input_val}'\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m     12\u001b[0m         \u001b[1;32mbreak\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m---> 13\u001b[1;33m     \u001b[1;32melif\u001b[0m \u001b[0minput_val\u001b[0m \u001b[1;33m>\u001b[0m \u001b[0mrandom_value\u001b[0m \u001b[1;33m:\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m     14\u001b[0m         \u001b[0mprint\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;34m'그보다 작습니다.'\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m     15\u001b[0m     \u001b[1;32melif\u001b[0m \u001b[0minput_val\u001b[0m \u001b[1;33m<\u001b[0m \u001b[0mrandom_value\u001b[0m \u001b[1;33m:\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
+      "\u001b[1;32m~\\AppData\\Local\\Temp\\ipykernel_1316\\624151212.py\u001b[0m in \u001b[0;36m<module>\u001b[1;34m\u001b[0m\n\u001b[0;32m     11\u001b[0m         \u001b[0mprint\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;34mf'입력한 숫자는 다음과 같습니다. {input_val}'\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m     12\u001b[0m         \u001b[1;32mbreak\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m---> 13\u001b[1;33m     \u001b[1;32melif\u001b[0m \u001b[0minput_val\u001b[0m \u001b[1;33m>\u001b[0m \u001b[0mrandom_value\u001b[0m \u001b[1;33m:\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m     14\u001b[0m         \u001b[0mprint\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;34m'그보다 작습니다.'\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m     15\u001b[0m     \u001b[1;32melif\u001b[0m \u001b[0minput_val\u001b[0m \u001b[1;33m<\u001b[0m \u001b[0mrandom_value\u001b[0m \u001b[1;33m:\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
       "\u001b[1;31mTypeError\u001b[0m: '>' not supported between instances of 'list' and 'int'"
      ]
     }
