--- a/14python_function.ipynb
+++ b/14python_function.ipynb
@@ -56,7 +56,7 @@
     "#     함수의 바디\n",
     "#     return 반환값\n",
     "\n",
-    "#return ->keyword를 만나면 함수를 빠져나감(함수 종료)\n",
+    "#return -> keyword를 만나면 함수를 빠져나감(함수 종료)\n",
     "#return을 여러번 사용하기도 함\n",
     "#return값이 없으면 함수 자체는 None을 출력 -ex)print()"
    ]
@@ -97,16 +97,16 @@
     "#따라서 Parameter가 어떤 종류의 argument를 받을지 정의\n",
     "\n",
     "#함수 정의\n",
-    "def greeting(name,age):\n",
+    "def greeting(name,age):         #parameter\n",
     "    print(f'{name}씨 안녕하세요. 약 {age * 365.25}일 되었습니다.')\n",
     "    \n",
     "#함수 호출\n",
-    "greeting('파이썬',32)"
+    "greeting('파이썬',32)            #argument"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 3,
    "id": "8c7ba414-7fe7-4984-bec0-89487a54b2b3",
    "metadata": {},
    "outputs": [
@@ -117,34 +117,38 @@
       "파이썬씨 안녕하세요. 약 11688.0일 되었습니다.\n",
       "파이썬씨 안녕하세요. 약 11688.0일 되었습니다.\n",
       "파이썬씨 안녕하세요. 약 11688.0일 되었습니다.\n",
+      "파이썬씨 안녕하세요. 약 11688.0일 되었습니다.\n",
       "파이썬씨 안녕하세요. 약 11688.0일 되었습니다.\n"
      ]
     }
    ],
    "source": [
-    "#위치-키워드 인자\n",
+    "#위치-키워드 인자 (positional-or-keyword parameter)\n",
     "\n",
-    "#위치 인수(positional argument)또는 키워드 인수(keyword argument)를 받을 수 있는 인자\n",
-    "\n",
-    "#위치 인수 먼저 작성, 키워드 인수는 제일 오른쪽에 작성\n",
+    "#위치 인수 또는 키워드 인수를 받을 수 있는 인자\n",
     "\n",
     "#기본값 설정 (defalt)  \n",
     "#인자 = \"기본값\"   / 인자에서는 defalt, 인수에서는 keyword\n",
-    "def greeting(name, age =32) :  \n",
-    "     print(f'{name}씨 안녕하세요. 약 {age * 365.25}일 되었습니다.')\n",
+    "#기본값이 없는 위치-키워드 인자는 인수 전달 필수(인수 전달 안하면 오류)\n",
+    "#defalt parameter(기본값 갖는 인자)는 non-defalt parameter보다 뒤에 작성\n",
     "\n",
-    "#위치 인수로 호출  -> 위치 인수는 순서 중요\n",
-    "greeting('파이썬',32)\n",
+    "def greeting(name,age=32):         #parameter  /  greeting(age=32,name) -> 오류\n",
+    "    print(f'{name}씨 안녕하세요. 약 {age * 365.25}일 되었습니다.')\n",
+    "    \n",
+    "#위치 인수로 호출  -> 위치 인수는 순서 중요 \n",
+    "greeting('파이썬',32)   \n",
     "\n",
     "#기본값 있는 인자는 인수 전달 생략 가능\n",
-    "greeting('파이썬')\n",
+    "greeting('파이썬',)\n",
     "\n",
     "#기본값 없는 인자에 키워드 인수로 값 전달 가능\n",
     "greeting(name='파이썬')\n",
     "\n",
     "#키워드 인수로 호출 , 순서 상관 없음\n",
     "greeting(age=32,name='파이썬')\n",
-    "    "
+    "\n",
+    "#위치 인수가 먼저, 키워드 인수는 마지막\n",
+    "greeting('파이썬',age = 32)\n"
    ]
   },
   {
@@ -191,7 +195,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 4,
    "id": "dd82598a-c0fe-42d3-a8a9-841fcbc3e5ff",
    "metadata": {},
    "outputs": [
@@ -210,7 +214,7 @@
      "traceback": [
       "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
       "\u001b[1;31mTypeError\u001b[0m                                 Traceback (most recent call last)",
-      "\u001b[1;32m~\\AppData\\Local\\Temp\\ipykernel_12588\\2288451200.py\u001b[0m in \u001b[0;36m<module>\u001b[1;34m\u001b[0m\n\u001b[0;32m     12\u001b[0m \u001b[0mkeyonly\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mkeyonly\u001b[0m\u001b[1;33m=\u001b[0m\u001b[1;34m'출력'\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m     13\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m---> 14\u001b[1;33m \u001b[0mkeyonly\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;34m'출력'\u001b[0m\u001b[1;33m)\u001b[0m   \u001b[1;31m# 위치 전용으로 입력해서 오류\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m",
+      "\u001b[1;32m~\\AppData\\Local\\Temp\\ipykernel_12876\\1829020737.py\u001b[0m in \u001b[0;36m<module>\u001b[1;34m\u001b[0m\n\u001b[0;32m     14\u001b[0m \u001b[0mkeyonly\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mkeyonly\u001b[0m\u001b[1;33m=\u001b[0m\u001b[1;34m'출력'\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m     15\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m---> 16\u001b[1;33m \u001b[0mkeyonly\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;34m'출력'\u001b[0m\u001b[1;33m)\u001b[0m   \u001b[1;31m# 위치 전용으로 입력해서 오류\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m",
       "\u001b[1;31mTypeError\u001b[0m: keyonly() takes 0 positional arguments but 1 was given"
      ]
     }
@@ -218,7 +222,9 @@
    "source": [
     "#키워드 전용 인자\n",
     "\n",
-    "#기본값 가질 수 있음\n",
+    "#기본값 가질 수 있음 \n",
+    "#defalt parameter에 상응하는 argument는 생략 가능\n",
+    "#*(애스터리스크)를 인자로 하고, 우측 인자를 키워드 전용 인자\n",
     "\n",
     "#함수 정의\n",
     "def keyonly(*,keyonly='defalt'):  #keyonly는 키워드 전용 인자\n",
@@ -564,7 +570,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 60,
+   "execution_count": 10,
    "id": "6cfd1305-0640-47f4-8f50-37a2a0ad9748",
    "metadata": {},
    "outputs": [],
@@ -578,12 +584,14 @@
     "\n",
     "#지역 변수\n",
     "#함수 바디(local scope)에서 선언된 변수\n",
-    "#변수를 만든 함수 안에서만 접근 가능\n"
+    "#변수를 만든 함수 안에서만 접근 가능\n",
+    "\n",
+    "#지역 범위에서 전역 변수에 대한 조회 가능 O / 변경은 가능 X\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 63,
+   "execution_count": 9,
    "id": "7545771e-772d-4e6d-ad14-982e4eb99bd6",
    "metadata": {},
    "outputs": [
@@ -596,14 +604,13 @@
     }
    ],
    "source": [
-    "#지역 범위에서 전역 변수 할당\n",
+    "#지역 범위에서 전역 변수 변경하는 방법\n",
     "#global 키워드 사용\n",
     "\n",
     "global_variable = '변경이 됩니까?'\n",
     "\n",
     "def heartbreaker():\n",
-    "    global global_variable   #global키워드를 활용해서 global_variable 전역변수를 지역범위로 \n",
-    "\n",
+    "    global global_variable   #global 키워드를 사용해서 전역변수 사용 설정 \n",
     "    global_variable = \"global 키워드 활용해서 변경 완료\"\n",
     "    \n",
     "heartbreaker()\n",
@@ -612,7 +619,82 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 73,
+   "execution_count": 25,
+   "id": "e2ebbf64-3519-4646-8145-ca964e1fced0",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "This is level 1.\n"
+     ]
+    }
+   ],
+   "source": [
+    "#함수 중첩\n",
+    "\n",
+    "#지역 변수는 중첩된 함수내에서는 접근 가능 O / 변경 가능 X\n",
+    "def level1():\n",
+    "    message = \"This is level 1.\"\n",
+    "    def level2():\n",
+    "        message = \"level2 is bettetr than level1.\"\n",
+    "    level2()\n",
+    "    print(message)\n",
+    "\n",
+    "level1()  \n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 26,
+   "id": "0f415aa6-2317-4b0f-b7ba-732cd1ad8fb5",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "level2 is better than level1.\n"
+     ]
+    }
+   ],
+   "source": [
+    "#안쪽 함수에서 바깥쪽 함수 변수 변경\n",
+    "#nonlocal 키워드 사용\n",
+    "\n",
+    "def level1():\n",
+    "    message = \"This is level 1.\"\n",
+    "    def level2():\n",
+    "        nonlocal message            #바깥 영역의 변수 사용 설정\n",
+    "        message = \"level2 is better than level1.\"\n",
+    "    level2()\n",
+    "    print(message)\n",
+    "\n",
+    "level1()  \n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 28,
+   "id": "ac5b961f-04b3-439c-88a3-4a53dd64a015",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#global키워드\n",
+    "#전역 변수를 변경\n",
+    "#함수의 중첩 정도와 상관 없이 전역 변수 매칭\n",
+    "\n",
+    "#nonlocal키워드\n",
+    "#지역 변수를 변경\n",
+    "#중첩된 함수마다 같은 이름의 변수가 존재하면 가장 가까운 바깥 변수 매칭\n",
+    "#가급적이면 변수 이름은 중복 사용 X\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 31,
    "id": "29701081-172e-4f97-901a-942937b6e2a8",
    "metadata": {},
    "outputs": [
@@ -633,55 +715,101 @@
     "\n",
     "#lambda [parameters]:expression\n",
     "\n",
-    "#호출방법\n",
+    "#바로 호출방법\n",
     "#(lambda [parameters]: expression)(arguments)\n",
     "\n",
     "(lambda x:x+10)(10)\n",
     "\n",
     "#람다로 만든 익명 함수 호출\n",
     "twice = lambda x : x*2\n",
-    "print(twice(10))\n",
-    "\n",
-    "#람다의 expression 부분은 변수 없이 식 한 줄로 표현 가능(인라인) 해야 함\n",
-    "#람다의 표현식 안에 새 변수를 만들 수 없습니다\n",
-    "#변수가 필요한 경우에는 def를 써서 함수를 정의\n"
+    "print(twice(10))\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 74,
+   "execution_count": 32,
+   "id": "306f545d-4257-4e52-80c5-037c74a7c697",
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "SyntaxError",
+     "evalue": "invalid syntax (2382109683.py, line 5)",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;36m  File \u001b[1;32m\"C:\\Users\\user\\AppData\\Local\\Temp\\ipykernel_12876\\2382109683.py\"\u001b[1;36m, line \u001b[1;32m5\u001b[0m\n\u001b[1;33m    (lambda x: y=10 ; x+y)(10)  #오류\u001b[0m\n\u001b[1;37m                ^\u001b[0m\n\u001b[1;31mSyntaxError\u001b[0m\u001b[1;31m:\u001b[0m invalid syntax\n"
+     ]
+    }
+   ],
+   "source": [
+    "#람다의 expression 부분은 변수 없이 식 한 줄로 표현 가능(인라인) 해야 함\n",
+    "#람다의 표현식 안에 새 변수를 만들 수 없음\n",
+    "#변수가 필요한 경우에는 def를 써서 함수를 정의\n",
+    "\n",
+    "(lambda x: y=10 ; x+y)(10)  #오류"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 36,
    "id": "d640b542-2328-425e-a8de-336aa94cf552",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'B'"
+      ]
+     },
+     "execution_count": 36,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "#조건 표현식 _inline if else\n",
+    "#조건 표현식 (inline if else)\n",
     "\n",
     "#if else를 한 줄로 작성하는 방법\n",
     "#lambda에 사용하면 활용도가 아주 좋음\n",
-    "#if만 단독 사용 X else랑 반드시 같이\n",
+    "#if만 단독 사용 X, else랑 반드시 같이\n",
     "\n",
     "#True일때 값 if 조건식 else False일때 값\n",
-    "\n"
+    "\n",
+    "score = 90\n",
+    "'A' if 90 < score <= 100 else 'B' if 80 < score else 'C'\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 75,
+   "execution_count": 38,
    "id": "cb545323-9d4d-4eef-b208-4c7e14974e14",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[2, 8, 18, 32, 50]\n"
+     ]
+    }
+   ],
    "source": [
     "#람다와 map()\n",
+    "#parameter와 iterable의 수 동일하게\n",
     "\n",
+    "#map(function,iterable)\n",
     "#map(lambda parameter1, parameter2, .. :expression,iterable1,iterable2,...)\n",
     "\n",
     "#한번쓰고 말 함수는 def로 정의해서 사용할 필요없이\n",
-    "#간단하게 함수 이름 없이 사용가능한 람다를 이용해서 사용하면 된다\n"
+    "#간단하게 함수 이름 없이 사용가능한 람다를 이용해서 사용하면 된다\n",
+    "\n",
+    "a = [ _ for _ in range(1,6)]\n",
+    "b = [ _ for _ in range(2,11,2)]\n",
+    "print(list(map(lambda x,y :x*y , a,b)))   #a와 b의 곱 구하는 함수"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 76,
+   "execution_count": 39,
    "id": "944ed527-bf31-4ac8-a1cf-5ddc62ff5fbe",
    "metadata": {},
    "outputs": [],
